--- a/recipe-stylesheet.css
+++ b/recipe-stylesheet.css
@@ -57,7 +57,7 @@ menu {
     list-style: none;
     background-color: #F2F2F2;
     padding: 0px;
-    margin: 0 auto 5px auto;
+    margin: 0 auto 10px auto;
 }
 
 menu li {
@@ -69,8 +69,14 @@ menu li {
     margin: 0px;
 }
 
+menu li p:hover {
+    color: #F2F2F2;
+    background-color: #EB5428;
+}
+
 li p {
-    margin: -5px 0 0 0;
+    margin: -10px 0 0 0;
+    height: 20px;
 }
 
 nav {
@@ -244,32 +250,37 @@ dd {
 
 #sides {
     display: grid;
+    grid-template-rows: 60px repeat(4, 120px);
+    width: 414px;
+    height: 581px;
+    row-gap: 10px;
     background-color: #7ABFBF;
+    z-index: 2;
 }
 
 #sides div {
     display: grid;
+    width: 414px;
     grid-template-columns: 30% 70%;
-    grid-template-rows: 1fr;
-    margin-left: 10px;
-    margin-top: 45px;
+    grid-template-rows: 120px;
 }
 
 #sides img {
     height: 100px;
     width: 100px;
     grid-column: 1/2;
+    padding: 10px 0 0 10px;
 }
 
 #sides p, #sides h3 {
     grid-column: 2/3;
     grid-row: 1/2;
     height: 45px;
-    margin: 0px;
+    margin: 10px 0 0 0;
 }
 
 #sides h2 {
-    margin-bottom: -10px;
+    margin-bottom: 10px;
 }
 
 #sides p {
@@ -278,11 +289,11 @@ dd {
 }
 
 #sides h3 {
-    margin-top: -5px;
+    margin-top: 5px;
 }
 
 #sides p:first-of-type {
-    margin-top: 40px;
+    margin-top: 50px;
 }
 
 #sides p:nth-of-type(2) {
@@ -303,12 +314,12 @@ dd {
 }
 
 #sides svg {
-    margin-top: 3px;
+    margin-top: 2px;
     margin-right: 3px;
 }
 
-#sides div:last-of-type {
-    margin-bottom: 15px;
+#sides div:hover {
+    background-color: #EB5428;
 }
 
 footer {
@@ -323,14 +334,20 @@ footer {
 
 #social figure {
     display: inline-block;
-    margin: 50px 20px 0 20px;
+    margin: 50px 15px 0 15px;
 }
 
 #social figcaption {
     font-family: "Bebas Neue";
     font-size: 20px;
+    width: 70px;
     color: #EB5428;
     margin-top: -5px;
+}
+
+#social figcaption:hover {
+    background-color: #EB5428;
+    color: #F2F2F2;
 }
 
 #tag {
@@ -389,7 +406,6 @@ ul a {
 ul a:hover {
     background-color: #EB5428;
     color: #F2F2F2;
-    transition: 0s;
 }
 
 #patty figure {
@@ -422,21 +438,17 @@ input#burger:checked ~ #patty {
         grid-gap: 0px;
         background-color: #F2F2F2;
     }
-
     nav {
         display: grid;
         width: 768px;
         grid-template-columns: 80px 1fr 1fr 80px;
     }
-    
     nav label {
         display: none;
     }
-
     #login {
         grid-column: 4/5;
     }
-    
     #patty {
         display: grid;
         width: 768px;
@@ -444,19 +456,17 @@ input#burger:checked ~ #patty {
         height: 120px;
         border-bottom-style: outset;
         border-color: #fefdfd;
+        z-index: 1;
     }
-
     #patty li, #patty a, #patty figure {
         width: 109.7px;
         height: 120px;
     }
-    
     #patty figcaption {
         width: 109.7px;
         height: 25px;
         padding-top: 0px;
     }
-
     #patty img {
         display: block;
         width: 60px;
@@ -464,14 +474,12 @@ input#burger:checked ~ #patty {
         margin: 0 auto;
         padding: 20px 0 0 0;
     }
-
     #patty a:hover {
         background-color: #EB5428;
         color: #F2F2F2;
         border-top: 1px solid #000000;
         transition: 0.1s;
     }
-
     form {
         z-index: 2;
         margin-top: 17px;
@@ -479,9 +487,9 @@ input#burger:checked ~ #patty {
         position: fixed;
         background-color: #F2F2F2;
     }
-
     header {
         height: 100px;
+        width: 768px;
         background-color: #F2F2F2;
         color: #000000;
         text-align: center;
@@ -492,13 +500,11 @@ input#burger:checked ~ #patty {
         padding-top: 200px;
         margin-bottom: -10px;
     }
-
     h1 {
         margin-bottom: 20px;
         margin-left: 15px;
         text-align: left;
     }
-    
     #dish {
         grid-column: 1/6;
         grid-row: 2/3;
@@ -507,14 +513,13 @@ input#burger:checked ~ #patty {
         grid-template-columns: 768px;
         grid-template-rows: auto;
         height: 1330px;
+        width: 768px;
     }
-    
     #dish img, #dish div {
         width: 768px;
         position: relative;
         bottom: 109px;
     }
-    
     #dish div p {
         display: block;
         width: 748px;
@@ -523,7 +528,6 @@ input#burger:checked ~ #patty {
         padding: 10px;
         margin: 0px;
     }
-    
     menu {
         display: grid;
         width: 768px;
@@ -535,12 +539,10 @@ input#burger:checked ~ #patty {
         backdrop-filter: blur(5px);
         z-index: 1;
     }
-
     menu svg {
         width: 50px;
         height: 50px;
     }
-
     menu li p {
         display: block;
         width: 40px;
@@ -548,135 +550,128 @@ input#burger:checked ~ #patty {
         overflow: hidden;
         margin: -10px auto 0 auto;
     }
-
     #details {
         grid-column: 1/5;
         grid-row: 3/4;
         text-align: center;
+        width: 768px;
     }
-
     #ingredients {
-        grid-column: 1/4;
+        grid-column: 1/3;
         grid-row: 4/5;
-        display: block;
         width: 200px;
-        flex-direction: column;
     }
-
     #directions {
-        grid-column: 3/5;
+        grid-column: 2/5;
         grid-row: 4/5;
         width: 550px;
-        flex-direction: column;
+        margin-left: 75px;
     }
-
     #directions ol {
         margin-top: 25px;
     }
-
     #directions h2 {
         height: 30px;
         margin: 5px 0 0 0;
     }
-
     #sides {
         grid-column: 1/5;
         grid-row: 5/6;
+        width: 768px;
+        height: 315px;
         display: grid;
         grid-template-columns: 1fr 1fr;
+        grid-template-rows: 40px repeat(2, 120px);
+        row-gap: 10px;
     }
-
+    #sides img {
+        margin: 10px 0 0 0;
+        padding: 0;
+    }
     #sides h2 {
         grid-column: 1/3;
     }
-
     #sides div {
-        margin: 20px 0 20px 0;
+        margin: 0;
+        width: 384px;
     }
-
     #sides div span:first-of-type {
         width: 60px;
         margin-top: 15px;
         margin-left: 0px;
     }
-
     #sides h3 {
         margin-top: 5px;
     }
-
     #sides p:first-of-type {
         margin-top: 50px;
     }
-
+    #sides p:last-of-type {
+        margin-top: 8px;
+    }
     footer {
         grid-column: 1/5;
         grid-row: 6/7;
         display: grid;
         height: 300px;
+        width: 768px;
         grid-template-columns: 40% 60%;
         grid-template-rows: 350px;
         margin: 0px;
     }
-
     #tag {
         grid-column: 1/2;
         grid-row: 1/2;
         margin-left: 70px;
     }
-
     #tag img {
         width: 175px;
         height: 175px;
         margin-top: 40px;
     }
-
     #tag p {
         margin: 0px;
         padding: 25px 0 0 0px;
     }
-
     #social {
         grid-column: 2/3;
         width: 400px;
+        height: 300px;
         margin: 0 0 0 60px;
     }
-
     #social figure {
         display: inline-block;
         width: 60px;
         margin: 40px 0 0 30px;
     }
-
+    #social svg {
+        margin-left: 10px;
+    }
 }
 
 @media screen and (min-width:1280px) {
-    body{
+    body {
         display: grid;
         grid-template-columns: 250px 1030px;
         grid-template-rows: auto;
         width: 1280px;
     }
-
     nav {
         display: grid;
         grid-template-columns: 120px 1fr 120px;
         width: 1280px;
         height: 120px;
     }
-
     #login, #logo {
         width: 120px;
         height: 120px;
     }
-
     #login svg, #logo svg {
         margin-top: 30px;
     }
-
     nav label {
         display: none;
     }
-
     #patty {
         display: grid;
         grid-template-columns: repeat(7, 100px);
@@ -685,7 +680,6 @@ input#burger:checked ~ #patty {
         margin-top: -80px;
         position: fixed;
     }
-
     form {
         position: absolute;
         margin-top: 160px;
@@ -696,7 +690,6 @@ input#burger:checked ~ #patty {
         grid-template-rows: 40px;
         z-index: 0;
     }
-
     form input {
         display: inline-block;
         width: 240px;
@@ -706,24 +699,21 @@ input#burger:checked ~ #patty {
         font-size: 16px;
         padding: 0;
     }
-
     form label, form button {
         position: relative;
         right: 10px;
     }
-    
     header {
         grid-column: 1/3;
         grid-row: 1/2;
         height: 85px;
+        width: 1280px;
     }
-
     h1 {
         text-align: center;
         margin: 20px auto 0px auto;
         font-size: 35px;
     }
-
     #dish {
         grid-column: 1/3;
         grid-row: 2/3;
@@ -732,26 +722,21 @@ input#burger:checked ~ #patty {
         grid-template-rows: 690px;
         height: 690px;
     }
-
     #dish img {
         width: 510px;
         height: 690px;
     }
-
     #dish div {
         width: 650px;
     }
-
     #dish div p {
         width: 630px;
         line-height: 28px;
     }
-
     #dish img, #dish div {
         position: relative;
         top: 0px;
     }
-
     menu {
         display: inline-flex;
         flex-direction: column;
@@ -762,30 +747,26 @@ input#burger:checked ~ #patty {
         border: 2px outset #EB5428;
         margin-left: 0px;
     }
-
     menu svg {
         width: 40px;
         height: 40px;
     }
-
     menu li {
         width: 120px;
         height: 80px;
     }
-
     menu li p {
         width: 40px;
         height: 22px;
         overflow: hidden;
     }
-
     #details {
         grid-column: 1/3;
         grid-row: 3/4;
+        width: 1280px;
         background-color: #0D0D0D;
         color: #7ABFBF;
     }
-
     #details dl {
         display: grid;
         grid-template-columns: repeat(5, 1fr);
@@ -793,71 +774,66 @@ input#burger:checked ~ #patty {
         text-align: center;
         margin-bottom: 10px;
     }
-
     dt {
         grid-row: 1/2;
     }
-
     dd {
         grid-row: 2/3;
     }
-
     #directions {
         grid-column: 2/3;
         grid-row: 4/5;
         width: 1000px;
-        margin-top: 2px;
+        margin: 2px 0 0 0;
         padding-left: 20px;
     }
-
     #sides {
         grid-column: 1/3;
         grid-row: 5/6;
         display: grid;
+        width: 1280px;
+        height: 455px;
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 50px 1fr;
         column-gap: 0px;
     }
-
     #sides h2 {
         grid-column: 2/4;
     }
-
     #sides div {
         grid-row: 2/3;
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: 250px 45px 45px 45px;
         width: 250px;
-        padding: 0 25px;
-        margin: 10px 0 0 0;
+        height: 385px;
+        padding: 0;
+        margin: 0;
         justify-self: center;
     }
-
     #sides img {
         grid-row: 1/2;
         width: 250px;
         height: 250px;
+        margin: 0;
+        padding: 0;
     }
-
     #sides h3 {
         grid-column: 1/2;
         grid-row: 2/3;
         text-align: left;
         width: 120px;
-        margin: 10px 0 0 0;
+        margin: 20px 0 0 0;
         padding-left: 10px;
     }
-
     #sides p:first-of-type {
         grid-column: 1/2;
         grid-row: 3/4;
         width: 230px;
         margin: 0px;
         padding-left: 10px;
-        margin-top: 5px;
+        margin-top: 15px;
     }
-
     #sides p:last-of-type {
         grid-column: 1/2;
         grid-row: 4/5;
@@ -867,11 +843,9 @@ input#burger:checked ~ #patty {
         top: 0px;
         padding-left: 10px;
     }
-
     #sides svg {
         margin-bottom: -3px;
     }
-
     footer {
         grid-column: 1/3;
         grid-row: 6/7;
@@ -879,7 +853,6 @@ input#burger:checked ~ #patty {
         grid-template-columns: 665px 1fr;
         height: 230px;
     }
-
     #tag {
         display: grid;
         height: 230px;
@@ -887,17 +860,14 @@ input#burger:checked ~ #patty {
         grid-template-columns: repeat(3, 125px);
         grid-template-rows: 1fr 1fr;
     }
-
     #tag img {
         grid-column: 1/3;
     }
-
     #tag p {
         grid-column: 2/4;
         grid-row: 1/2;
         padding: 60px 35px 0 0;
     }
-
     #social {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
@@ -906,5 +876,4 @@ input#burger:checked ~ #patty {
         width: 615px;
         margin: 0;
     }
-
 }
